syntax = "proto3";

import "errors.proto";
import "data_model.proto";
import  "router_grpc.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "vearchpb";
option optimize_for = SPEED;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = false;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = false;
option (gogoproto.benchgen_all) = false;
option (gogoproto.goproto_getters_all) = false;

enum OpType {
    CREATE = 0;
    DELETE = 1;
    REPLACE = 2;
    BULK = 3;
    GET = 4;
    SEARCH = 5;
}
//*********************** Partition *********************** //

message PartitionData{
    OpType type = 1;
    uint32 partitionID = 2;
    string messageID = 3;
    repeated Item items = 4;
    SearchRequest search_request = 5;
    SearchResponse search_response = 6;
    bytes data = 7;
    Error err = 8;
    repeated SearchRequest search_requests = 9;
    repeated SearchResponse search_responses = 10;
    int32 del_num = 11;
    DelByQueryeResponse del_by_query_response = 12;
}

//*********************** Raft *********************** //
message UpdateSpace {
    bytes Space = 1;
    uint64 version = 2;
}

message DocCmd {
    OpType type = 1;
    int64 version = 3;
    uint32 slot = 5;
    bytes doc = 7;
	repeated bytes docs = 8;
}

enum CmdType {
    WRITE = 0;
    UPDATESPACE = 1;
    FLUSH = 2;
}

message RaftCommand {
    CmdType type = 1;
    DocCmd write_command = 2;
    UpdateSpace update_space = 3;
}

message SnapData {
    bytes key = 1;
    bytes value = 2;
}

